deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reverse-words
  name: reverse-words
spec:
  template:
    spec:
      containers:
      - env:
        - name: RELEASE
          value: Stage Release
        - $patch: replace
        image: quay.io/pamelamatun/tekton-reversewords:128fd48c4633630f068cabeef55d4b8a4eb235d3
        name: reverse-words
